--- a/social-proof-section-master/index.html
+++ b/social-proof-section-master/index.html
@@ -21,9 +21,9 @@
   <body>
     <div class="container">
       <div class="sub">
-        <div class="header">
+        <header class="header">
         <h1> 10,000+ of our users love our products.</h1>
-      </div>
+      </header>
      
 
       <div class="para">
